--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   </div>
 
   <div class="note">
-    Hubungi penyedia configurasi Clash<strong>@reo</strong>.
+    Hubungi penyedia configurasi Clash Meta<strong>@reo</strong>.
   </div>
 
 </body>
