--- a/index.html
+++ b/index.html
@@ -119,7 +119,20 @@
       Kuota 28GB - Rp13.500 - 7 Hari
     </a>
   </div>
-
+  
+  <!-- Kartu: Paket Telkomsel -->
+  <div class="card">
+    <h2>Paket VPN</h2>
+    <a class="btn btn-block" href="http://lynk.id/reokadhafi/4vkpj7vlpnvd/checkout" target="_blank" rel="noopener">
+      VPN 7 Hari
+    </a>
+    <p></p>
+    <p></p>
+    <a class="btn btn-block" href="http://lynk.id/reokadhafi/89oqjko79o0o/checkout" target="_blank" rel="noopener">
+      VPN 30 Hari
+    </a>
+  </div>
+  
   <!-- Kartu: Aplikasi VPN -->
   <div class="card">
     <h2>Clash Meta</h2>
