--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
   <div class="card">
     <h2>Paket VPN</h2>
     <a class="btn btn-block" href="http://lynk.id/reokadhafi/4vkpj7vlpnvd/checkout" target="_blank" rel="noopener">
-      VPN 7 Hari
+      VPN 7 Hari - Rp5.000
     </a>
     <p></p>
     <p></p>
     <a class="btn btn-block" href="http://lynk.id/reokadhafi/89oqjko79o0o/checkout" target="_blank" rel="noopener">
-      VPN 30 Hari
+      VPN 30 Hari - Rp20.000
     </a>
   </div>
   
