--- a/index.html
+++ b/index.html
@@ -105,23 +105,33 @@
   <div class="title">Paket Murah <strong>Telkomsel</strong></div>
   <div class="subtitle">Nikmati akses internet dan alat bantu terbaik</div>
 
-  <!-- Kartu: Paket Telkomsel -->
+  <!-- Kartu: Paket Telkomsel via Mytelkomsel -->
   <div class="card">
-    <h2>Paket Telkomsel</h2>
-
+    <h2>Paket Telkomsel via Mytelkomsel</h2>
     <a class="btn btn-block" href="https://my.telkomsel.com/app/payment-method?link=fa9f025645de4e8458280c7462acc9320240ecf31a041050799da4964d123a9089295a3c5ee1a2d45527e68c20a0e8ae" target="_blank" rel="noopener">
       Kuota 15GB - Rp20.000 - 30 Hari
     </a>
-    
     <p></p>
     <p></p>
-
     <a class="btn btn-block" href="https://my.telkomsel.com/app/package-details/d57bc38dbf6676c04fdd6f69c8dfe2a2" target="_blank" rel="noopener">
       Kuota 28GB - Rp13.500 - 7 Hari
     </a>
   </div>
-  
-  <!-- Kartu: Paket Telkomsel -->
+
+  <!-- Kartu: Paket Telkomsel via Jasa Tembak -->
+  <div class="card">
+    <h2>Paket Telkomsel via Jasa Tembak</h2>
+    <a class="btn btn-block" href="http://lynk.id/reokadhafi/zz2wdv619r2o/checkout" target="_blank" rel="noopener">
+      Kuota 15GB - Rp25.000 - 30 Hari
+    </a>
+    <p></p>
+    <p></p>
+    <a class="btn btn-block" href="http://lynk.id/reokadhafi/mgykp421v5je/checkout" target="_blank" rel="noopener">
+      Kuota 28GB - Rp17.000 - 7 Hari
+    </a>
+  </div>
+
+  <!-- Kartu: Paket VPN -->
   <div class="card">
     <h2>Paket VPN</h2>
     <a class="btn btn-block" href="http://lynk.id/reokadhafi/4vkpj7vlpnvd/checkout" target="_blank" rel="noopener">
