--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
   <!-- Kartu: Paket Telkomsel via Mytelkomsel -->
   <div class="card">
-    <h2>Paket Telkomsel via Mytelkomsel</h2>
+    <h2>Paket Telkomsel via Apps Mytelkomsel</h2>
     <a class="btn btn-block" href="https://my.telkomsel.com/app/payment-method?link=fa9f025645de4e8458280c7462acc9320240ecf31a041050799da4964d123a9089295a3c5ee1a2d45527e68c20a0e8ae" target="_blank" rel="noopener">
       Kuota 15GB - Rp20.000 - 30 Hari
     </a>
@@ -152,7 +152,13 @@
   </div>
 
   <div class="note">
+    Peket Telkomsel ini hanya dapat digunakan dengan VPN.
+  </div>
+  <div class="note">
     Hubungi penyedia konfigurasi VPN <strong>@reo</strong> untuk configurasi.
+  </div>
+  <div class="note">
+    <strong>2025</strong>
   </div>
 
 </body>
