--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
   <div class="card">
     <h2>Paket VPN</h2>
     <a class="btn btn-block" href="http://lynk.id/reokadhafi/89oqjko79o0o/checkout" target="_blank" rel="noopener">
-      VPN 30 Hari - Rp20.000
+      VPN Rp20.000 - 30 Hari
     </a>
     <p></p>
     <p></p>
     <a class="btn btn-block" href="http://lynk.id/reokadhafi/4vkpj7vlpnvd/checkout" target="_blank" rel="noopener">
-      VPN 7 Hari - Rp5.000
+      VPN Rp5.000 - 7 Hari
     </a>
   </div>
   
