--- a/index.html
+++ b/index.html
@@ -155,7 +155,11 @@
     Peket Telkomsel ini hanya dapat digunakan dengan VPN.
   </div>
   <div class="note">
-    Hubungi penyedia konfigurasi VPN <strong>@reo</strong> untuk configurasi.
+    Hubungi penyedia 
+    <a href="https://wa.me/6281247888889" target="_blank" style="text-decoration: none;">
+      <img src="https://img.icons8.com/ios-filled/16/25D366/whatsapp.png" alt="WA" style="vertical-align: middle; margin-right: 1px;"/>
+      <strong>@reo</strong>
+    </a>
   </div>
   <div class="note">
     <strong>2025</strong>
