--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <body>
 
   <div class="title">Paket Murah <strong>Telkomsel</strong></div>
-  <div class="subtitle">Nikmati akses internet dan alat bantu terbaik</div>
+  <div class="subtitle">Nikmati akses internet dengan VPN terbaik</div>
 
   <!-- Kartu: Paket Telkomsel via Mytelkomsel -->
   <div class="card">
