--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
   <div class="card">
     <h2>Clash Meta</h2>
     <p>Aplikasi VPN untuk mengaktifkan paket internet tertentu.</p>
-    <a class="btn apk" href="https://github.com/MetaCubeX/ClashMetaForAndroid/releases/download/v2.11.8/cmfa-2.11.8-meta-universal-release.apk" target="_blank">Download APK</a>
+    <a class="btn apk" href="https://drive.google.com/file/d/1-iOyUTEMee2cwQlEANMRKUn32ik2v6Jt/view?usp=drivesdk" target="_blank">Download APK</a>
   </div>
 
   <div class="note">
