--- a/index.html
+++ b/index.html
@@ -35,6 +35,49 @@
       max-height: 200px;
     }
 
+    table {
+      width: 50%;
+      border-collapse: collapse;
+      margin: 0 auto 30px auto;
+      background: #fff;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      border-radius: 12px;
+      overflow: hidden;
+    }
+    thead {
+      background-color: #e60000;
+      color: #fff;
+    }
+    th {
+      padding: 12px;
+      text-align: center;
+      border-bottom: 1px solid #ddd;
+      font-size: 14px;
+    }
+    td {
+      padding: 12px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+      font-size: 14px;
+    }
+    tr:last-child td {
+      border-bottom: none;
+    }
+    .btn-beli {
+      background-color: #e60000;
+      color: #fff;
+      padding: 6px 14px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s ease, transform 0.2s ease;
+      display: inline-block;
+    }
+    .btn-beli:hover {
+      background-color: #c40000;
+      transform: scale(1.05);
+    }
+
     .card {
       background: white;
       border-radius: 16px;
@@ -44,17 +87,6 @@
       width: 100%;
       margin-bottom: 30px;
       text-align: left;
-    }
-
-    .card h2 {
-      font-size: 14px;
-      margin-bottom: 10px;
-    }
-
-    .card p {
-      font-size: 14px;
-      color: #555;
-      margin-bottom: 20px;
     }
 
     .btn {
@@ -97,7 +129,6 @@
       margin-top: 20px;
       max-height: 200px;
     }
-
   </style>
 </head>
 <body>
@@ -105,14 +136,42 @@
   <div class="title">Paket Murah <strong>Telkomsel</strong></div>
   <div class="subtitle">Nikmati akses internet dengan VPN terbaik</div>
 
-  <!-- Kartu: Paket Telkomsel via Mytelkomsel -->
-  <div class="card">
-    <h2>Paket Telkomsel via Apps Mytelkomsel</h2>
-    <a class="btn btn-block" href="https://my.telkomsel.com/app/payment-method?link=fa9f025645de4e8458280c7462acc9320240ecf31a041050799da4964d123a9089295a3c5ee1a2d45527e68c20a0e8ae" target="_blank" rel="noopener">
-      Kuota 15GB - Rp20.000 - 30 Hari
-    </a>
-    <p></p>
-  </div>
+  <h2 style="text-align:center; color:#e60000; margin-bottom:20px;">Paket Telkomsel via MyTelkomsel</h2>
+
+  <table>
+    <thead>
+      <tr>
+        <th>Nama Paket</th>
+        <th>Masa Aktif</th>
+        <th>Kuota</th>
+        <th>Harga</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>gamemax_30day</td>
+        <td>30 Hari</td>
+        <td>15 GB</td>
+        <td>Rp20.000</td>
+        <td><a class="btn-beli" href="https://my.telkomsel.com/app/payment-method?link=fa9f025645de4e8458280c7462acc9320240ecf31a041050799da4964d123a9089295a3c5ee1a2d45527e68c20a0e8ae" target="_blank">Beli</a></td>
+      </tr>
+      <tr>
+        <td>gamemax_fup_100kb_mlbb</td>
+        <td>30 Hari</td>
+        <td>11.5 GB</td>
+        <td>Rp25.000</td>
+        <td><a class="btn-beli" href="https://my.telkomsel.com/app/payment-method?link=053fb7d98b1b22b153d42ae60283bfb5ed5fec0925992db109141d9b0ee58342335cabd2de53093d2c85c60836045d8e" target="_blank">Beli</a></td>
+      </tr>
+      <tr>
+        <td>gamemax_fup_100kb_ff</td>
+        <td>30 Hari</td>
+        <td>11.5 GB</td>
+        <td>Rp25.000</td>
+        <td><a class="btn-beli" href="https://my.telkomsel.com/app/package-details/f9edb5ebefd4b8dcba448b3cebf2c3ce" target="_blank">Beli</a></td>
+      </tr>
+    </tbody>
+  </table>
 
   <!-- Kartu: Paket Telkomsel via Jasa Tembak -->
   <div class="card">
@@ -120,7 +179,6 @@
     <a class="btn btn-block" href="http://lynk.id/reokadhafi/zz2wdv619r2o/" target="_blank" rel="noopener">
       Kuota 15GB - Rp25.000 - 30 Hari
     </a>
-    <p></p>
   </div>
 
   <!-- Kartu: Paket VPN -->
@@ -129,22 +187,21 @@
     <a class="btn btn-block" href="http://lynk.id/reokadhafi/89oqjko79o0o/" target="_blank" rel="noopener">
       VPN Rp20.000 - 30 Hari
     </a>
-    <p></p>
-    <p></p>
     <a class="btn btn-block" href="http://lynk.id/reokadhafi/4vkpj7vlpnvd/" target="_blank" rel="noopener">
       VPN Rp5.000 - 7 Hari
     </a>
   </div>
-  
+
   <!-- Kartu: Aplikasi VPN -->
   <div class="card">
     <h2>Clash Meta</h2>
     <p>Aplikasi VPN untuk mengaktifkan paket internet tertentu.</p>
-    <a class="btn apk" href="https://www.mediafire.com/file/kwhllr58v9scqp8/cmfa-2.11.8-meta-universal-release.apk/file" target="_blank">Download APK</a>
+    <a class="btn apk" href="https://www.mediafire.com/file/kwhllr58v9scqp8/cmfa-2.11.8-meta-universal-release.apk/file" target="_blank">Download APK1</a>
+    <a class="btn apk" href="https://github.com/MetaCubeX/ClashMetaForAndroid/releases/download/v2.11.16/cmfa-2.11.16-meta-universal-release.apk" target="_blank">Download APK2</a>
   </div>
 
   <div class="note">
-    Peket Telkomsel ini hanya dapat digunakan dengan VPN.
+    Paket Telkomsel ini hanya dapat digunakan dengan VPN.
   </div>
   <div class="note">
     Hubungi penyedia 
