--- a/index.html
+++ b/index.html
@@ -150,21 +150,21 @@
     </thead>
     <tbody>
       <tr>
-        <td>gamemax_30day</td>
+        <td>gamemax</td>
         <td>30 Hari</td>
         <td>15 GB</td>
         <td>Rp20.000</td>
         <td><a class="btn-beli" href="https://my.telkomsel.com/app/payment-method?link=fa9f025645de4e8458280c7462acc9320240ecf31a041050799da4964d123a9089295a3c5ee1a2d45527e68c20a0e8ae" target="_blank">Beli</a></td>
       </tr>
       <tr>
-        <td>gamemax_fup_100kb_mlbb</td>
+        <td>gamemax_fup_100kb_mlbb (belum di uji)</td>
         <td>30 Hari</td>
         <td>11.5 GB</td>
         <td>Rp25.000</td>
         <td><a class="btn-beli" href="https://my.telkomsel.com/app/payment-method?link=053fb7d98b1b22b153d42ae60283bfb5ed5fec0925992db109141d9b0ee58342335cabd2de53093d2c85c60836045d8e" target="_blank">Beli</a></td>
       </tr>
       <tr>
-        <td>gamemax_fup_100kb_ff</td>
+        <td>gamemax_fup_100kb_ff (belum di uji)</td>
         <td>30 Hari</td>
         <td>11.5 GB</td>
         <td>Rp25.000</td>
