--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
       color: #fff;
     }
     th {
-      padding: 17px;
+      padding: 12px;
       text-align: center;
       border-bottom: 1px solid #ddd;
       font-size: 14px;
     }
     td {
       padding: 12px;
-      text-align: left;
+      text-align: center;
       border-bottom: 1px solid #ddd;
       font-size: 14px;
     }
