--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
           <td><a class="btn-beli" href="https://my.telkomsel.com/app/payment-method?link=fa9f025645de4e8458280c7462acc9320240ecf31a041050799da4964d123a9089295a3c5ee1a2d45527e68c20a0e8ae" target="_blank">Beli</a></td>
         </tr>
         <tr>
-          <td>gmx_mlbb_unlimited_100kb (tahap uji coba)</td>
+          <td>gmx_mlbb_unlimited_100kb_1.5GB (tahap uji coba)</td>
           <td>30 Hari</td>
-          <td>11.5 GB</td>
+          <td>Unlimited</td>
           <td>Rp25.000</td>
           <td><a class="btn-beli" href="https://my.telkomsel.com/app/payment-method?link=053fb7d98b1b22b153d42ae60283bfb5ed5fec0925992db109141d9b0ee58342335cabd2de53093d2c85c60836045d8e" target="_blank">Beli</a></td>
         </tr>
