--- a/index.html
+++ b/index.html
@@ -198,14 +198,14 @@
       </thead>
       <tbody>
         <tr>
-          <td>gamemax</td>
+          <td>Paket 15GB</td>
           <td>30 Hari</td>
           <td>15 GB</td>
           <td>Rp20.000</td>
           <td><a class="btn-beli" href="https://my.telkomsel.com/app/payment-method?link=fa9f025645de4e8458280c7462acc9320240ecf31a041050799da4964d123a9089295a3c5ee1a2d45527e68c20a0e8ae" target="_blank">Beli</a></td>
         </tr>
         <tr>
-          <td>gmx_mlbb_unlimited_100kb_1.5GB (tahap uji coba)</td>
+          <td>Paket Unlimited [tanpa kuota full 1 bulan] (tahap uji coba)</td>
           <td>30 Hari</td>
           <td>Unlimited</td>
           <td>Rp25.000</td>
