--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@
           <td>30 Hari</td>
           <td>Unlimited</td>
           <td>Rp25.000</td>
-          <td><a class="btn-beli" href="https://my.telkomsel.com/app/payment-method?link=053fb7d98b1b22b153d42ae60283bfb5ed5fec0925992db109141d9b0ee58342335cabd2de53093d2c85c60836045d8e" target="_blank">Beli</a></td>
+          <!-- <td><a class="btn-beli" href="https://my.telkomsel.com/app/payment-method?link=053fb7d98b1b22b153d42ae60283bfb5ed5fec0925992db109141d9b0ee58342335cabd2de53093d2c85c60836045d8e" target="_blank">Beli</a></td> -->
+          <td><a class="btn-beli" href="https://paket.reonolimits.my.id" target="_blank">Maintenance</a></td>
         </tr>
       </tbody>
     </table>
