Update download links for Clash Meta APK

--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
   <div class="card">
     <h2>Clash Meta</h2>
     <p>Aplikasi VPN untuk mengaktifkan paket internet tertentu.</p>
-    <a class="btn apk" href="https://github.com/MetaCubeX/ClashMetaForAndroid/releases" target="_blank">Download APK1</a>
-    <a class="btn apk" href="https://github.com/MetaCubeX/ClashMetaForAndroid/releases/download/v2.11.18/cmfa-2.11.18-meta-universal-release.apk" target="_blank">Download APK2</a>
+    <a class="btn apk" href="https://github.com/MetaCubeX/ClashMetaForAndroid/releases" target="_blank">Release Github</a>
+    <a class="btn apk" href="https://github.com/MetaCubeX/ClashMetaForAndroid/releases/download/v2.11.20/cmfa-2.11.20-meta-universal-release.apk" target="_blank">Download APK</a>
   </div>
 
   <div class="note">
