--- a/index.html
+++ b/index.html
@@ -204,6 +204,13 @@
           <td>Rp20.000</td>
           <td><a class="btn-beli" href="https://my.telkomsel.com/app/payment-method?link=fa9f025645de4e8458280c7462acc9320240ecf31a041050799da4964d123a9089295a3c5ee1a2d45527e68c20a0e8ae" target="_blank">Beli</a></td>
         </tr>
+        <tr>
+          <td>Paket 15GB V2</td>
+          <td>30 Hari</td>
+          <td>15 GB</td>
+          <td>Rp20.000</td>
+          <td><a class="btn-beli" href="https://my.telkomsel.com/app/package-details/17cfca68ad4aed9b853457a8f60fc38a?utm_source=Google&utm_medium=SEM&utm_campaign=TSEL-SImpatigeneralQ1-BC-10721&utm_term=Text&utm_content=SIMPATINonton" target="_blank">Beli</a></td>
+        </tr>
       </tbody>
     </table>
   </div>
