--- a/index.html
+++ b/index.html
@@ -350,6 +350,42 @@
         </div>
         <a class="btn-beli" href="https://my.telkomsel.com/app/package-details/17cfca68ad4aed9b853457a8f60fc38a?utm_source=Google&utm_medium=SEM&utm_campaign=TSEL-SImpatigeneralQ1-BC-10721&utm_term=Text&utm_content=SIMPATINonton" target="_blank" rel="noopener">Beli Sekarang</a>
       </div>
+
+      <div class="package-card">
+        <div class="package-header">
+          <div class="package-name">Nelpon 300m<span class="badge">Sekali beli</span></div>
+          <div class="package-price">Rp5.000</div>
+        </div>
+        <div class="package-details">
+          <div class="detail-item">
+            <span class="icon-calendar"></span>
+            <span>30 Hari</span>
+          </div>
+          <div class="detail-item">
+            <span class="icon-data"></span>
+            <span>300 Menit</span>
+          </div>
+        </div>
+        <a class="btn-beli" href="https://my.telkomsel.com/app/package-details/ad3920ab381ba6295280c1f7296a70cf" target="_blank" rel="noopener">Beli Sekarang</a>
+      </div>
+
+      <div class="package-card">
+        <div class="package-header">
+          <div class="package-name">Nelpon 600m<span class="badge">Sekali beli</span></div>
+          <div class="package-price">Rp10.000</div>
+        </div>
+        <div class="package-details">
+          <div class="detail-item">
+            <span class="icon-calendar"></span>
+            <span>30 Hari</span>
+          </div>
+          <div class="detail-item">
+            <span class="icon-data"></span>
+            <span>600 Menit</span>
+          </div>
+        </div>
+        <a class="btn-beli" href="https://my.telkomsel.com/app/package-details/69a6390b6b7b7afb587d0b0e2d35cc4c" target="_blank" rel="noopener">Beli Sekarang</a>
+      </div>
     </div>
 
     <!-- Paket Jasa Tembak -->
