--- a/index.html
+++ b/index.html
@@ -299,6 +299,11 @@
       content: "📊";
       margin-right: 4px;
     }
+    .icon-promo::before {
+      content: "🚨";
+      margin-right: 4px;
+      
+    }
   </style>
 </head>
 <body>
@@ -364,6 +369,7 @@
           <div class="detail-item">
             <span class="icon-data"></span>
             <span>300 Menit</span>
+            <span class="badge">Hanya tersedia saat promo</span>
           </div>
         </div>
         <a class="btn-beli" href="https://my.telkomsel.com/app/package-details/ad3920ab381ba6295280c1f7296a70cf" target="_blank" rel="noopener">Beli Sekarang</a>
@@ -382,6 +388,7 @@
           <div class="detail-item">
             <span class="icon-data"></span>
             <span>600 Menit</span>
+            <span class="badge">Hanya tersedia saat promo</span>
           </div>
         </div>
         <a class="btn-beli" href="https://my.telkomsel.com/app/package-details/69a6390b6b7b7afb587d0b0e2d35cc4c" target="_blank" rel="noopener">Beli Sekarang</a>
