--- a/index.html
+++ b/index.html
@@ -358,8 +358,8 @@
 
       <div class="package-card">
         <div class="package-header">
-          <div class="package-name">Nelpon 300m<span class="badge">Sekali beli</span></div>
-          <div class="package-price">Rp5.000</div>
+          <div class="package-name">Nelpon 200m All opt<span class="badge">Test</span></div>
+          <div class="package-price">Rp10.000</div>
         </div>
         <div class="package-details">
           <div class="detail-item">
@@ -368,11 +368,11 @@
           </div>
           <div class="detail-item">
             <span class="icon-data"></span>
-            <span>300 Menit</span>
+            <span>200 Menit</span>
             <span class="badge">Hanya tersedia saat promo</span>
           </div>
         </div>
-        <a class="btn-beli" href="https://my.telkomsel.com/app/package-details/ad3920ab381ba6295280c1f7296a70cf" target="_blank" rel="noopener">Beli Sekarang</a>
+        <a class="btn-beli" href="https://my.telkomsel.com/v2/basic/package-detail?pkg-detail-id=00120603" target="_blank" rel="noopener">Beli Sekarang</a>
       </div>
 
       <div class="package-card">
