--- a/index.html
+++ b/index.html
@@ -372,13 +372,13 @@
             <span class="badge">Hanya tersedia saat promo</span>
           </div>
         </div>
-        <a class="btn-beli" href="https://my.telkomsel.com/v2/basic/package-detail?pkg-detail-id=00120603" target="_blank" rel="noopener">Beli Sekarang</a>
+        <a class="btn-beli" href="https://my.telkomsel.com/v2/basic/package-detail?pkg-detail-id=wfVSz4T9h07Hgh-js27CW0VXQyL2SzLMMgwK-U0SO-Ygq9o" target="_blank" rel="noopener">Beli Sekarang</a>
       </div>
 
       <div class="package-card">
         <div class="package-header">
           <div class="package-name">Nelpon 600m<span class="badge">Sekali beli</span></div>
-          <div class="package-price">Rp10.000</div>
+          <div class="package-price">Rp20.000</div>
         </div>
         <div class="package-details">
           <div class="detail-item">
@@ -391,7 +391,7 @@
             <span class="badge">Hanya tersedia saat promo</span>
           </div>
         </div>
-        <a class="btn-beli" href="https://my.telkomsel.com/app/package-details/69a6390b6b7b7afb587d0b0e2d35cc4c" target="_blank" rel="noopener">Beli Sekarang</a>
+        <a class="btn-beli" href="https://my.telkomsel.com/v2/basic/package-detail?pkg-detail-id=wfVSz4T9h07Hgh-js27CW0VXRf4IA1TYBkZsKySQ0P-_-44" target="_blank" rel="noopener">Beli Sekarang</a>
       </div>
     </div>
 
