--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
             <span class="badge">Hanya tersedia saat promo</span>
           </div>
         </div>
-        <a class="btn-beli" href="https://my.telkomsel.com/v2/basic/package-detail?pkg-detail-id=wfVSz4T9h07Hgh-js27CW0VXQyL2SzLMMgwK-U0SO-Ygq9o" target="_blank" rel="noopener">Beli Sekarang</a>
+        <a class="btn-beli" href="https://my.telkomsel.com/v2/basic/package-detail?pkg-detail-id=wfVSz4T9hkzHix-js27CW0VXQ5qYjKJavNs4gYgSxejh4xk&menu-id=telpsms&version=2.6.10" target="_blank" rel="noopener">Beli Sekarang</a>
       </div>
 
       <div class="package-card">
