--- a/index.html
+++ b/index.html
@@ -358,8 +358,8 @@
 
       <div class="package-card">
         <div class="package-header">
-          <div class="package-name">Nelpon 200m All opt<span class="badge">Test</span></div>
-          <div class="package-price">Rp10.000</div>
+          <div class="package-name">Nelpon 300m<span class="badge">🔥</span></div>
+          <div class="package-price">Rp5.000</div>
         </div>
         <div class="package-details">
           <div class="detail-item">
@@ -368,17 +368,17 @@
           </div>
           <div class="detail-item">
             <span class="icon-data"></span>
-            <span>200 Menit</span>
+            <span>300 Menit</span>
             <span class="badge">Hanya tersedia saat promo</span>
           </div>
         </div>
-        <a class="btn-beli" href="https://my.telkomsel.com/v2/basic/package-detail?pkg-detail-id=wfVSz4T9hkzHix-js27CW0VXQ5qYjKJavNs4gYgSxejh4xk&menu-id=telpsms&version=2.6.10" target="_blank" rel="noopener">Beli Sekarang</a>
+        <a class="btn-beli" href="https://my.telkomsel.com/app/package-details/24c83614692b6b2759d529a6de7c39e7" target="_blank" rel="noopener">Beli Sekarang</a>
       </div>
 
       <div class="package-card">
         <div class="package-header">
-          <div class="package-name">Nelpon 600m<span class="badge">Sekali beli</span></div>
-          <div class="package-price">Rp20.000</div>
+          <div class="package-name">Nelpon 600m<span class="badge">🔥</span></div>
+          <div class="package-price">Rp10.000</div>
         </div>
         <div class="package-details">
           <div class="detail-item">
@@ -391,7 +391,7 @@
             <span class="badge">Hanya tersedia saat promo</span>
           </div>
         </div>
-        <a class="btn-beli" href="https://my.telkomsel.com/v2/basic/package-detail?pkg-detail-id=wfVSz4T9h07Hgh-js27CW0VXRf4IA1TYBkZsKySQ0P-_-44" target="_blank" rel="noopener">Beli Sekarang</a>
+        <a class="btn-beli" href="https://my.telkomsel.com/app/package-details/6a1abf0322294e59fe3790bb0bbb509c" target="_blank" rel="noopener">Beli Sekarang</a>
       </div>
     </div>
 
